--- a/WEB-labs-With-Gulp/dest/css/index.css
+++ b/WEB-labs-With-Gulp/dest/css/index.css
@@ -19,6 +19,7 @@ body {
   background-color: #fafbfc;
 }
 
+/* Menu list   */
 .menu {
   background-color: #323232;
   height: 100vh;
@@ -98,6 +99,7 @@ body {
   padding-left: 10px;
 }
 
+/*  Top part   */
 .top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
   display: flex;
   justify-content: space-between;
@@ -136,6 +138,7 @@ body {
   padding: 0px 25px;
 }
 
+/*  Main statistic   */
 .main_statistic {
   padding: 20px 0px 0px 13vw;
 }
@@ -172,6 +175,7 @@ body {
   border-bottom: 2px solid #59ec0f;
 }
 
+/*  Days   */
 .top_part_of_functionals, .top_functionals, .top_day_block, .one_time_period {
   display: flex;
   justify-content: space-between;
