--- a/WEB-labs-With-Gulp/src/views/templates/main.pug
+++ b/WEB-labs-With-Gulp/src/views/templates/main.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
-    title MARVEL
+    title toggl
     link(rel="stylesheet" href="../css/reset.css")
     link(rel="stylesheet" href="../css/index.css")
     link(href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet")
