--- a/todos-react/src/App.css
+++ b/todos-react/src/App.css
@@ -41,3 +41,13 @@ button:hover {
 .complete {
   background-color: green;
 }
+
+.list_item {
+  list-style-type: none;
+  display: flex;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
